Final Fix of the whole API and completed the test cases. Also finished the swagger documentation.
